--- a/src/palette.scss
+++ b/src/palette.scss
@@ -1,7 +1,7 @@
-$color-1: #3b5249;
-$color-2: #519872;
-$color-3: #afd4c0;
-$color-4: #e5f4ec;
-$color-5: #8aea92;
-$color-6: #fec2c2;
-$color-7: #dedede;
+$color-pop-text: #3b5249;
+$color-header: #519872;
+$color-app-background: #afd4c0;
+$color-app-content: #e5f4ec;
+$color-action-button: #8aea92;
+$color-warning-button: #fec2c2;
+$color-card-content: #dedede;
